--- a/views/hamilton.html
+++ b/views/hamilton.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DH Heroinas & Heroes | Home </title>
+    <title>DH Heroinas & Heroes | Hamilton </title>
 </head>
 <body>
-    <h1> HEROES</h1>
+    <h1>Hamilton</h1>
 </body>
 </html>
