Se incorporan imagenes a carpeta img - se utilizan herramientas de Html

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,18 @@
     <title>DH Heroinas & Heroes | Home </title>
 </head>
 <body>
-    <h1> HEROES</h1>
+
+    <h1> HEROINAS Y HEROES TECNOLOGICOS</h1>
+    <a href="/babbage"> <img title="Babbage" height="200" src="/img/babbage.jpg" alt = "Babbage"/>  </a>
+    <a href="/berners-lee">    <img title="Berners-lee" height="200" src="/img/berners-lee.jpg" alt = "Berners-lee"/></a>
+    <a href="/turing"> <img title="Turing" height="200" src="/img/turing.webp" alt = "Turing"/> </a>
+    <br>   
+    <a href="/clarke"> <img  title="Clarke" height="200" src="/img/clarke.jpg" alt = "Clarke"/>  </a>
+    <a href="/hamilton"> <img title="Hamilton" height="200" src="/img/hamilton.jpg" alt = "Hamilton"/></a>
+    <a href="/hopper"> <img title="Hopper" height="200" src="/img/hopper.jpg" alt = "Hopper"/> </a>
+    <br>   
+    <a href="/lovelace"> <img title="Lovelace" height="200" src="/img/lovelace.jpg" alt = "Lovelace"/> </a>
+
+       
 </body>
 </html>
